# image-process

./: CMakeLists.txt  README.md  myimg.pc.in
include/: bmp.h  border.h  brilho.h  espelha.h  gira180.h  gira90.h  maxmin.h  menu.h  negative.h  pgm.h  preto_branco.h  rgb_to_gray.h  sepia.h  showheader.h
lib/: border.c  brilho.c  espelha.c  gira180.c  gira90.c  maxmin.c  menu.c  negative.c  pgm.c  preto_branco.c  rgb_to_gray.c  sepia.c  showheader.c
src/: principal.c
